--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "~=4.0.0"
-whitenoise = "~=6.2.0"
-gunicorn = "~=20.1.0"
+django = "==4.*"
+gunicorn = "==21.*"
 environs = {version = "==9.5.0", extras = ["django"]}
 psycopg2-binary = "~=2.9.3"
 
