--- a/.env
+++ b/.env
@@ -11,3 +11,8 @@ SECRET_KEY=zn-7evt8%-4mcat9t*ta1mxn+8d(#*)a0e5)gomq8(03qv#@-p
 #DB_HOST=posgresql_container_name
 #DB_PORT=5432
 #DATABASE=postgres
+
+# ------- CREATE .env.db FILE INCLUDE BELOW LINES ------- #
+#POSTGRES_USER=database_user
+#POSTGRES_PASSWORD=**********
+#POSTGRES_DB=database_name
